--- a/src/main/resources/templates/inventory.html
+++ b/src/main/resources/templates/inventory.html
@@ -480,12 +480,7 @@
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="/products" class="active">Products</a></li>
         <li><a href="/inventory" class="manager-only">Inventory</a></li>
-        <li><a href="/cart" class="user-only">
-            <div class="cart-icon">
-                Cart
-                <span id="cartCount" class="cart-count" style="display: none;">0</span>
-            </div>
-        </a></li>
+        <li><a href="/cart" class="user-only">🛒 Cart</a></li>
     </ul>
     <div class="user-info">
         <span id="username">Loading...</span>
